<resources>
    <string name="app_name" translatable="false">AegistNet</string>
    <string name="id" translatable="false">487946012349-brimdf043dkkn6de7uspdv91mo7rc9s0.apps.googleusercontent.com</string>
    <string name="parent_name">Parent Name</string>
    <string name="login_button">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="parent_email">Parent email address</string>
    <string name="enter_your_email_address">Please enter your email address to request a password reset.</string>
    <string name="your_email">Your email</string>
    <string name="child_name">Child Name</string>
    <string name="activity_log">Activity Log</string>
    <string name="apps">Apps</string>
    <string name="location">Location</string>
    <string name="child_app_name">App name</string>
    <string name="this_app_is_blocked_by_your_parents">Is blocked by your parents</string>
    <string name="web_filter" translatable="false">Web Filter</string>
    <string name="select_geofence_s_center">Center</string>
    <string name="diameter_in_meters">Diameter in meters</string>
    <string name="device_admin_description">Allow AegistNet to lock the device</string>
    <string name="device_admin" translatable="false">AegistNet</string>
    <string name="device_admin_explanation">AegistNet need to be device admin to be able to lock the phone</string>
    <string name="device_admin_enabled">Device Admin Enabled</string>
    <string name="device_admin_disabled">Device Admin Disabled</string>
    <string name="ok">OK</string>
    <string name="phone_unlocked">Phone Unlocked</string>
    <string name="phone_locked">Phone Locked</string>
    <string name="lock_timer_set_after">Phone will be locked after</string>
    <string name="hours">hours</string>
    <string name="web_filter_disabled" translatable="false">Web filter disabled</string>
    <string name="web_filter_enabled" translatable="false">Web filter enabled</string>
    <string name="hh">HH</string>
    <string name="two_dots">:</string>
    <string name="mm">MM</string>
    <string name="and">and</string>
    <string name="minutes">minutes</string>
    <string name="maximum_is_23_hours">Enter a valid hours, maximum is 23 hours</string>
    <string name="maximum_is_59_minutes">Enter a valid minutes, maximum is 59 minutes</string>
    <string name="enter_a_valid_number">Enter a valid number</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="lock_appname" translatable="false">Lock AppName</string>
    <string name="remember_me">Remember me</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_succeeded">Authentication Succeeded</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="email_isnt_registered">Email isn\'t registered</string>
    <string name="wrong_password">Wrong password</string>
    <string name="loading">Loading…</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="this_email_isnt_registered_as_parent">This email isn\'t registered as a parent</string>
    <string name="verification_email_sent_it_may_be_within_your_drafts">Verification email sent</string>
    <string name="email_is_already_in_use">Email is already in use</string>
    <string name="weak_password">Weak password</string>
    <string name="sign_up_falied">Signup Failed</string>
    <string name="enter_valid_password">Enter a valid password</string>
    <string name="kid" translatable="false">Aegist</string>
    <string name="safe" translatable="false">Net</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>
    <string name="image_upload_error">Image upload error</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="general">General</string>
    <string name="account">Account</string>
    <string name="info">Info</string>
    <string name="website">Website</string>
    <string name="version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="settings">Settings</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="login_with_google">Login with google</string>
    <string name="new_here">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_to_logout">Request parent approval to logout?</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="password_updated">Password updated</string>
    <string name="kids">Kids</string>
    <string name="no_kids_added_yet">No kids added yet</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="permission_explanation">Permission Explanation</string>
    <string name="permission_explanation_main">To allow AegistNet to function properly, please accept the following permissions.</string>
    <string name="permission_explanation_sms">We need to be able to read the messages in order to show them to the parent.</string>
    <string name="permission_explanation_phone_calls">We need to be able to get the phone calls information in order to show them to the parent.</string>
    <string name="permission_explanation_settings">In order to lock the child\'s phone, lock and unlock the apps, we need the following permissions.</string>
    <string name="send_sms_permission">Send SMS Permission</string>
    <string name="read_sms_permission">Read SMS Permission</string>
    <string name="receive_sms_permission">Receive SMS Permission</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="send_sms_explanation">This permission is needed to be able to see the messages your child sends</string>
    <string name="phone_state_permission">Phone state permission</string>
    <string name="read_call_log_permission">Read call log permission</string>
    <string name="read_contacts_permission">Read contacts permission</string>
    <string name="read_sms_explanation">This permission is needed to be able to read your child\'s messages</string>
    <string name="receive_sms_explanation">This permission is needed to be able to read the messages received by your child</string>
    <string name="read_phone_state_explanation">This permission is needed to be able to see your child calls info</string>
    <string name="read_call_log_explanation">This permission is needed to let you see your child\'s call log</string>
    <string name="read_contacts_explanation">This permission is needed to get the names of your child\'s contacts</string>
    <string name="location_permission">Location permission</string>
    <string name="write_settings_permission">Write settings permission</string>
    <string name="overlay_permission">Overlay permission</string>
    <string name="package_usage_permission">Package usage permission</string>
    <string name="location_permission_explanation">This permission is needed to allow you to get your child\'s location</string>
    <string name="write_settings_permission_explanation">This permission is needed to allow the AegistNet to block other apps</string>
    <string name="overlay_permission_explanation">This permission is needed to monitor other apps</string>
    <string name="package_usage_permission_explanation">This permission is needed to allow AegistNet to get and upload your child\'s apps info</string>
    <string name="finish">Finish</string>
    <string name="device_admin_permission">Device admin permission</string>
    <string name="please_allow_permissions">Please allow all the permissions to enable AegistNet to work properly</string>
    <string name="please_allow_location_permission">Please allow access to the location</string>
    <string name="password_reset_email_sent">Password reset email sent, it may be within your drafts</string>
    <string name="name_validation">Enter a name less than 15 characters</string>
    <string name="please_add_a_profile_image">Please add a profile image</string>
    <string name="if_he_exceeded_it_you_will_be_alerted">, if exceeded it, you will be alerted</string>
    <string name="phone">phone</string>
    <string name="lock">Lock</string>
    <string name="now_or_after_a_period">now, or after a period of time?</string>
    <string name="upper_dot_s" translatable="false">\'s</string>
    <string name="device">device</string>
    <string name="please_enter_a_valid_diameter">Please enter a valid diameter</string>
    <string name="minutes_ago">Mins ago</string>
    <string name="unknown_number">Unknown Number</string>
    <string name="a_moment_ago">A moment ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="deleted_the_app">has uninstalled the app.</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>
    <string name="calls">Calls</string>
    <string name="no_messages_received_yet">No messages received yet</string>
    <string name="no_calls_received_yet">No calls received yet</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="phone_call_permission_explanation">This permission is needed to be able to call the contact</string>
    <string name="who_will_be_using_this_device">Who will be using this device?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="please_enter_this_child_parent_email">Please enter this child\'s parent email</string>
    <string name="setup_geo_fence_on">Setup a Geo-Fence on</string>
    <string name="please_download_google_play_services">Please download google play services</string>
    <string name="stop">Stop</string>
    <string name="is_out_of_the_fence">is out of the fence</string>
    <string name="cant_start_the_fence_without_your_location">Please enable your location, we can\'t start the fence around you without it</string>
    <string name="s_device" translatable="false">\'s device</string>
    <string name="about_message">AegistNet is a free and open source android parental control app which allows parents to keep their children\'s activity under control. AegistNet was developed as a graduation project by the members specified below</string>
    <string name="developers">Developers</string>
    <string name="developer1">Arnold Jay G. Lolong</string>
    <string name="developer2">Julius M. Asis</string>
    <string name="developer3">Cedrick S. Calicdan</string>
    <string name="developer4">Guian Paulo O. Baldovino</string>
    <string name="thesis_adviser">Thesis Adviser</string>
    <string name="adviser_name">Ramallosa Alvina</string>
    <string name="technical_critic">Technical Critic</string>
    <string name="critic_name">Clarence Salvador</string>
    <string name="critic_name2">Rachel Onsik</string>
    <string name="_1_0">1.0</string>
    <string name="tagline">Protecting your family, digitally.</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="child_device_setup_desc">Scan the QR code from your parent\'s device to connect</string>
</resources>