<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_warm"
    android:layoutDirection="locale"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_16dp"
            android:paddingBottom="@dimen/margin_32dp">

            <!-- General Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface_card"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_16dp"
                android:paddingBottom="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_12dp"
                android:elevation="1dp">

                <TextView
                    style="@style/TextViewSettingsHeader"
                    android:text="@string/general" />

                <Button
                    android:id="@+id/btnLanguageSelection"
                    style="@style/ButtonSettings"
                    android:text="@string/language"
                    android:drawableStart="@drawable/ic_language"
                    android:drawablePadding="@dimen/padding_12dp"
                    android:drawableTint="@color/text_secondary"
                    android:paddingTop="@dimen/padding_12dp"
                    android:paddingBottom="@dimen/padding_12dp" />
            </LinearLayout>

            <!-- Account Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface_card"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_16dp"
                android:paddingBottom="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_12dp"
                android:elevation="1dp">

                <TextView
                    style="@style/TextViewSettingsHeader"
                    android:text="@string/account" />

                <Button
                    android:id="@+id/btnLogout"
                    style="@style/ButtonSettings"
                    android:text="@string/logout"
                    android:drawableStart="@drawable/ic_reset"
                    android:drawablePadding="@dimen/padding_12dp"
                    android:drawableTint="@color/text_secondary"
                    android:paddingTop="@dimen/padding_12dp"
                    android:paddingBottom="@dimen/padding_12dp" />

                <include layout="@layout/horizontal_line" />

                <Button
                    android:id="@+id/btnChangePassword"
                    style="@style/ButtonSettings"
                    android:text="@string/change_password"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/padding_12dp"
                    android:drawableTint="@color/text_secondary"
                    android:paddingTop="@dimen/padding_12dp"
                    android:paddingBottom="@dimen/padding_12dp" />

                <include layout="@layout/horizontal_line" />

                <Button
                    android:id="@+id/btnDeleteAccount"
                    style="@style/ButtonSettings"
                    android:text="@string/delete_account"
                    android:textColor="@color/error_red"
                    android:drawableStart="@drawable/ic_delete"
                    android:drawablePadding="@dimen/padding_12dp"
                    android:drawableTint="@color/error_red"
                    android:paddingTop="@dimen/padding_12dp"
                    android:paddingBottom="@dimen/padding_12dp" />
            </LinearLayout>

            <!-- Info Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface_card"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_16dp"
                android:paddingBottom="@dimen/margin_8dp"
                android:elevation="1dp">

                <TextView
                    style="@style/TextViewSettingsHeader"
                    android:text="@string/info" />

                <Button
                    android:id="@+id/btnAbout"
                    style="@style/ButtonSettings"
                    android:text="@string/about"
                    android:drawableStart="@drawable/ic_info"
                    android:drawablePadding="@dimen/padding_12dp"
                    android:drawableTint="@color/text_secondary"
                    android:paddingTop="@dimen/padding_12dp"
                    android:paddingBottom="@dimen/padding_12dp" />

                <include layout="@layout/horizontal_line" />

                <Button
                    android:id="@+id/btnSendFeedBack"
                    style="@style/ButtonSettings"
                    android:text="@string/send_feedback"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="@dimen/padding_12dp"
                    android:drawableTint="@color/text_secondary"
                    android:paddingTop="@dimen/padding_12dp"
                    android:paddingBottom="@dimen/padding_12dp" />

                <include layout="@layout/horizontal_line" />

                <Button
                    android:id="@+id/btnVisitWebsite"
                    style="@style/ButtonSettings"
                    android:text="@string/website"
                    android:drawableStart="@drawable/ic_language"
                    android:drawablePadding="@dimen/padding_12dp"
                    android:drawableTint="@color/text_secondary"
                    android:paddingTop="@dimen/padding_12dp"
                    android:paddingBottom="@dimen/padding_12dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>